# car_model

./: .gitignore  README.md
MATLAB/10stateModel/bare/: motorTorques.m  tires.m
MATLAB/10stateModel/matlab_model/: rollout.m  rollout_kin.m
MATLAB/10stateModel/misc/: saturation.m
MATLAB/10stateModel/scripts/: initialize_parameters.m  state.m  statespaceexploration.m  visualization.m
MATLAB/10stateModel/simulink_model/: model.slx
MATLAB/3stateModel/: F_y.m  F_yPaj.m  Fy_F.m  Fy_R.m  Fz_F.m  Fz_R.m  a_F.m  a_R.m  initialize_parameters_simple.m  testMex.m  threeStateModel.m
MATLAB/3stateModel/mexStuff/: compileMexWrappers.m  mexcpp.cpp  mexcpp.mexa64  testMex.m  threeStateModelMex.mexa64  (+1 more)
MATLAB/bare/: pacejka.m  robustDiv.m  robustDiv2.m  saturation.m  statespacemodel.m
MATLAB/gokartSYSID/: pure_pursuit_evaluation.m  torque_to_speed_sysid.m
MATLAB/scripts/: test.m
MATLAB/simulink_model/: model2014a.slx
bare/: avoidSingularity.m  brakes.m  coulombFriction.m  ctype_hatchback.m  deadZone.m  limitIntegrators.m  motorTorques.m  rateLimiter.m  rimo_sinus_ion.m  simple.m  statespacemodel.m  visualization_ext.m  x0_demo1.m  x0_demo2.m  x0_demo3.m  zt_pacejka.m  zt_tires.m
cpp/: CMakeLists.txt
cpp/include/: car_dynamics.h  kinematic_model.h  parameters.h  system_dynamics.h  three_state_model.h
cpp/src/: kinematic_model.cpp  three_state_model.cpp
cpp/src/mexes/: threeStateModelMex.cpp
cpp/test/: test.cpp
docs/: .gitignore  equations.tex  readme.txt
matlab_model/: rollout.m
scripts/: initialize_parameters.m  test.m
simulink_model/: model.slx
(+1 files in other folders)
